[package]
name = "af-indexer"
version.workspace = true
authors = ["?"]
license = "Apache-2.0"
publish = false
edition = "2021"

[features]
pg_integration = []
default = ["postgres-feature"]
postgres-feature = [
  "diesel/postgres",
  "diesel/postgres_backend",
  "diesel-derive-enum/postgres",
]
mysql-feature = [
  "diesel/mysql",
  "diesel/mysql_backend",
  "diesel-derive-enum/mysql",
]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
backoff.workspace = true
bcs.workspace = true
chrono.workspace = true
clap.workspace = true
diesel = { workspace = true, optional = true }
diesel-derive-enum = { workspace = true, optional = true }
diesel_migrations.workspace = true
downcast = "0.11.0"
futures.workspace = true
itertools.workspace = true
object_store.workspace = true
prometheus.workspace = true
regex.workspace = true
secrecy = "0.8.0"
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
tap.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["rt"] }
toml.workspace = true
tracing.workspace = true
url.workspace = true

mysten-metrics.workspace = true
sui-data-ingestion-core.workspace = true
sui-json.workspace = true
sui-json-rpc.workspace = true
sui-json-rpc-types.workspace = true
sui-storage.workspace = true
sui-types.workspace = true
sui-package-resolver.workspace = true
telemetry-subscribers.workspace = true
sui-rest-api.workspace = true

move-core-types.workspace = true

[[bin]]
name = "af-indexer"
path = "src/main.rs"
